# fyp

./: CMakeLists.txt  README.md  package.xml
launch/: chatbot_test.launch  face_detection_test.launch  features.launch  functions.launch  noise_detection_test.launch
scripts/(unused) aiml_test/: aiml_test.py
scripts/(unused) aiml_test/files_for_aiml/: hello.aiml  setup.aiml
scripts/(unused) simple_pub_and_sub_test/: listener.py
scripts/chatbot/: (unused) chatbot.py  (unused) chatbot_function_node.py  chatbot.py  chatbot_function_node_clean.py  chatbot_function_node_clean_without_mic.py  chatbot_main_clean.py
scripts/chatbot/aiml_files/: chatbot_citation.txt  setup.aiml
scripts/chatbot/aiml_files/customized/: library_info.aiml
scripts/chatbot/aiml_files/my_info_tabby/: client.aiml  salutations.aiml  subjects.aiml
scripts/chatbot/aiml_files/predefined/: book_return.aiml  collections.aiml  (+7 more)
scripts/chatbot/unused/: (unused) chatbot_w_noise_detection.py
scripts/face_detection/: (unused) face_detection.py  face_detection.py  face_detection_clean.py  face_detection_copy.py  face_detection_test.py
scripts/noise_level_detection/: callback_test.py  noise_detection.py  noise_detection_clean.py  noise_detection_pub_sub.py  noise_detection_redo.py
scripts/noise_level_detection/unused/: noise_detection.py  noise_detection_2021-11-09_1318.py  noise_detection_pub_sub.py  noise_detection_pub_sub2.py
scripts/simple_pub_and_sub_test/: listener.py  talker.py
scripts/testing_without_ros/: chatbot_copy.py  face_detection_copy.py
unused/: CMakeLists copy.txt
(+5 files in other folders)
